Code refactor part 1

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cors": "*",
     "eslint": "~3.19.0",
     "express": "*",
+    "http-errors": "^1.6.1",
     "jsonwebtoken": "*",
+    "lodash": "~4.17.4",
     "mongoose": "*",
     "passport": "*",
     "passport-jwt": "*",
