Add create and get objectives features

--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "dependencies": {
     "bcrypt-as-promised": "~1.1.0",
     "bcryptjs": "*",
-    "body-parser": "*",
+    "body-parser": "^1.17.2",
     "cors": "*",
     "eslint": "~3.19.0",
-    "express": "*",
+    "express": "^4.15.3",
     "http-errors": "^1.6.1",
-    "jsonwebtoken": "*",
+    "jsonwebtoken": "^7.4.1",
     "lodash": "~4.17.4",
-    "mongoose": "*",
+    "mongoose": "^4.10.6",
     "passport": "*",
     "passport-jwt": "*",
-    "promise": "*",
+    "promise": "^7.3.0",
     "superagent": "~3.5.2"
   },
   "author": "",
